--- a/web/css/index.css
+++ b/web/css/index.css
@@ -1,3 +1,11 @@
+:root {
+    --var1: 0;
+    --var2: 33%;
+    --var3: 66%;
+    --var4: 100%;
+}
+
+
 html{
     font-family: Consolas;
     -webkit-user-select: none; /* Safari */        
@@ -7,10 +15,17 @@ html{
 }
 
 body{
+    margin:0;
+}
+
+#bodyContainer{
     margin-left: 1vw;
     margin-right: 1vw;
     margin-bottom:0;
     margin-top:0;
+    height: 100vh;
+    background-image: linear-gradient(to right, rgba(255,0,0,0) var(--var1), rgba(255,255,255,1) var(--var2), rgba(255,255,255,1) var(--var3), rgba(255,0,0,0) var(--var4));
+    /* background-color: green; */
     color: #292f33;
 }
 
@@ -105,6 +120,7 @@ li{
     margin: 0;
     border-radius: 0.2em;
     background-color: #F1F1F1;
+    margin-bottom: 3em;
 }
 
 .freeTakenListContainer{
@@ -131,6 +147,7 @@ li{
 }
 
 #info{
+    margin:0
     /* text-align: center; */
     /* vertical-align: middle; */
 }
