--- a/web/css/index.css
+++ b/web/css/index.css
@@ -1,8 +1,8 @@
 :root {
-    --var1: 0;
+    /* --var1: 0;
     --var2: 33%;
     --var3: 66%;
-    --var4: 100%;
+    --var4: 100%; */
 }
 
 /* @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"); */
@@ -166,7 +166,7 @@ li{
     /* vertical-align: middle; */
 }
 
-.download{
+a{
     color: #292f33;
 }
 
