--- a/web/css/tiles.css
+++ b/web/css/tiles.css
@@ -1,11 +1,11 @@
-#tilesCover{
+/* #tilesCover{
     position: fixed;
     margin:0;
     height: 100vh;
     width: 100%;
     z-index:-1;
     background-image: linear-gradient(to right, rgba(255,0,0,0) var(--var1), rgba(255,255,255,1) var(--var2), rgba(255,255,255,1) var(--var3), rgba(255,0,0,0) var(--var4));
-}
+} */
 
 #tiles{
     position: fixed;
