--- a/web/css/index.css
+++ b/web/css/index.css
@@ -20,7 +20,7 @@
 }
 
 html{
-    font-family: Consolas, American Typewriter;
+    font-family: Consolas, ConsolasApple;
     -webkit-user-select: none; /* Safari */        
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+/Edge */
