--- a/web/css/index.css
+++ b/web/css/index.css
@@ -29,6 +29,7 @@ html{
 
 body{
     margin:0;
+    background-color: #F1F3F4;
 }
 
 
@@ -77,7 +78,7 @@ li{
 
 .radioUnselected {
     color: #292f33;
-    background-color: #F1F1F1;
+    background-color: #DEE1E6;
 }
 
 .radioContainer {
@@ -150,7 +151,7 @@ li{
     display: inline-block;
     margin: 0;
     border-radius: 0.2em;
-    background-color: #F1F1F1;
+    background-color: #DEE1E6;
     /* margin-bottom: 3em;+ */
 }
 
@@ -173,7 +174,7 @@ li{
     line-height: 2em;
     text-align: center;
     margin: auto;
-    background-color: #F1F1F1;
+    background-color: #DEE1E6;
     border-radius: 0.2em;
 }
 
