fixing scrollbar and refreshing runs

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -25,6 +25,8 @@ html{
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+/Edge */
     user-select: none; /* Standard */
+    overflow: -moz-scrollbars-vertical; 
+    overflow-y: scroll;
 }
 
 body{
